fixed x-axis overflow

--- a/static/css/createlist.css
+++ b/static/css/createlist.css
@@ -1,4 +1,3 @@
-
 button { /*Removes button borders and outline*/
 	background-color: Transparent;
 	padding: 0;
@@ -19,7 +18,7 @@ textarea{
   position:absolute;
   left:51%;
   top:28vh;
-  width:50%;
+  width:48%;
 }
 .left {
   position:relative;
@@ -185,6 +184,17 @@ label {
 @media screen and (max-width: 400px) { /*Small Mobile devices*/
 label {
   font-size:25px;
+}
+ .right {
+  position:absolute;
+  left:0vw;
+  top:70vh;
+  width:100%;
+}
+.beware {
+  top:-10vh;
+  width:80vw;
+  left:-26vw;
 }
 .postbutton{
   position: relative;
