--- a/static/css/listing.css
+++ b/static/css/listing.css
@@ -1,6 +1,6 @@
 .listingscontainer {
   position:relative;
-  top:10%;
+  top:11%;
   left:5%;
   height:100%;
   width:80%;
@@ -45,7 +45,7 @@
   font-size:20px;
   font-weight:bold;
   position:absolute;
-  top:-6vh;
+  top:-9vh;
   left:0vw;
 }
 .listitemsabout { /*About me*/
